Se separo en un segundo archivo las funciones y se modificaron los mensajes de salida.

--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,16 @@
 [ACCESS]
 #### Appliance de Awingu al que conectarse
-URL : https://awingu.edgecapital.tech/
+url : https://awingu.edgecapital.tech/
+
+[VARIABLES]
 ### dominio a utilizar
-domain: EDGEOS
+domain : EDGEOS
 ### Si se va verificar la comunicación al API de Awingu
-VERIFY : True
+verify : True
 ### Numero de dias hacia atras para solicitar la información de las sesiones
-DAYS : 5
+days : 5
 #Seconds without open RDP apps before Awingu assumes session is idle
-IDLE : 900
+idle : 900
 ## Seconds between interactions
-DELAY : 120
+delay : 120
 
