Ya puede leer de config.ini en mayusculas y minusculas.

--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,16 @@
 [ACCESS]
 #### Appliance de Awingu al que conectarse
-url : https://awingu.edgecapital.tech/
+URL : https://awingu.edgecapital.tech/
 
 [VARIABLES]
 ### dominio a utilizar
-domain : EDGEOS
+DOMAIN : EDGEOS
 ### Si se va verificar la comunicación al API de Awingu
-verify : True
+VERIFY : True
 ### Numero de dias hacia atras para solicitar la información de las sesiones
-days : 5
+DAYS : 5
 #Seconds without open RDP apps before Awingu assumes session is idle
-idle : 900
+IDLE : 900
 ## Seconds between interactions
-delay : 120
+DELAY : 120
 
